# ownGameServer

./: .gitignore  CMakeLists.txt  LICENSE
src/: CMakeLists.txt  main.cpp
src/business/: IMsgHandler.hpp  ReqHandler.cpp  ReqHandler.hpp
src/business/GameLogic/: GameCmdHandler.hpp  GameMapIO.hpp  GameProto.hpp  RuntimeData.hpp
src/business/GamePlayer/: GamePlayer.hpp  GamePlayerInfo.hpp  GamePlayerProtoImpl.hpp
src/business/GamePlayerManager/: GamePlayerManager.hpp
src/business/GameRoom/: GameRoom.hpp  GameRoomManager.hpp  GameRoomUtils.hpp
src/business/Group/: Group.hpp
src/core/: ToolFunc.hpp  Types.h
src/core/User/: IUserStateStore.hpp  UserBaseInfo.hpp  UserStateManager.cpp  UserStateManager.hpp
src/network/: ClientSession.cpp  ClientSession.hpp  IMessageCodec.hpp  IMessageSender.hpp  TcpServer.cpp  TcpServer.hpp  UserConnectionManager.cpp  UserConnectionManager.hpp  UserSessionMap.cpp  UserSessionMap.hpp
src/network/Router/: IBusinessMsgGateway.hpp  MsgRouter.cpp  MsgRouter.hpp
src/network/codec/: IMessageCodec.hpp  mTcpCodec.hpp
src/network/session/: ClientSession.cpp  ClientSession.hpp  IMessageSender.hpp  SessionManager.cpp  SessionManager.hpp  TcpConnection.cpp  TcpConnection.hpp
src/protocol/: IMsgParser.hpp  MessageProto.hpp  PlayerProto.hpp  ProtocolType.hpp  mTcpProto.h
src/protocol/Router/: IBusinessMsgGateway.hpp  MsgRouter.cpp  MsgRouter.hpp  UserSessionMap.cpp  UserSessionMap.hpp
test/: CMakeLists.txt
test/unit/: core_test.cpp
